# RustIQ

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  TODO.md
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  ENGINE_ARCHITECTURE.md  TODO.md  UI_ARCHITECTURE.md
rustiq/: Cargo.toml
rustiq-engine/: Cargo.toml
rustiq-engine/src/: graph.rs  lib.rs
rustiq-engine/src/sinks/: spectrum.rs
rustiq-engine/tests/: engine_test.rs
rustiq-messages/: Cargo.toml
rustiq-messages/src/: command.rs  event.rs  lib.rs  state.rs  units.rs
rustiq-ui/: Cargo.toml
rustiq-ui/src/: control_panel.rs  lib.rs  state.rs  waterfall.rs
rustiq/src/: main.rs
src/: lib.rs  main.rs
src/engine/: engine.rs  graph.rs  mod.rs  sdr.rs
src/engine/sinks/: mod.rs  spectrum.rs
src/messages/: command.rs  event.rs  mod.rs  state.rs  units.rs
src/ui/: mod.rs  state.rs  waterfall.rs
tests/: engine_test.rs
