[package]
name = "rustiq"
version = "0.1.0"
edition = "2024"

[dependencies]
rustiq-messages = { path = "../rustiq-messages" }
rustiq-engine = { path = "../rustiq-engine" }
rustiq-ui = { path = "../rustiq-ui" }
flume = "0.11"
anyhow = "1.0"
log = { version = "0.4.29", features = ["release_max_level_warn"] }
env_logger = "0.11.8"
